test/fail/warnings-as-errors.mo
//MOC-FLAG -E=M0194,M0089
// NOTE:     ^ this format is necessary because of the way the flags are parsed in run.sh
func main(x : Int) {};
ignore main(1);
